# pytest-kind

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
pytest_kind/: cluster.py  plugin.py
tests/: test_cluster.py  test_plugin.py
