[tool.poetry]
name = "pytest-kind"
version = "22.11.1"
description = "Kubernetes test support with KIND for pytest"
authors = ["Henning Jacobs <henning@jacobs1.de>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://codeberg.org/hjacobs/pytest-kind"
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.plugins.pytest11]
pytest-kind = "pytest_kind.plugin"

[tool.poetry.dependencies]
python = ">=3.7"
pykube-ng = ">=0.30"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pytest-cov = ">=2.7"
pre-commit = ">=2.9.3"

[tool.pytest.ini_options]
addopts = "--ignore=examples"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
